--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -83,6 +83,12 @@ android {
         versionName "1.0"
     }
     signingConfigs {
+        release {
+            storeFile file('jetsetgo.keystore')
+            storePassword 'jetsetgo'
+            keyAlias 'jetsetgo'
+            keyPassword 'jetsetgo'
+        }
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
